EBNF.txt
/* next version:
fn add[u8 a, u8 b] u8 {
	ret a + b;
}

fn main[argv] null {
	x u8 = 2;
	y u8 = 4;
	print[add[x, y]];
}

current version:
fn add[a, b]
{
    ret a + b;
}

fn main[]
{
    x = 15;
    global y = 10;
    z = add[x, y];
    ret 0;

AST:
                     RET
                    /
                  ADDVE(ADD)
                   

program = { use_directive } { fn_signature }

use_directive = "use" IDENT { ":" IDENT } ";"

fn_signature = head statement

head = "fn" IDENT "[" [ IDENT { "," IDENT } ] "]"

block = "{" { statement } "}"

statement =
    fn_signature
    | if_stmt
    | while_stmt
    | ret_stmt
    | expression
    | block
    | empty_stmt
    | local_assign
    | global_assign

if_stmt = "if" expression statement ["else" statement]

while_stmt = "while" expression statement

ret_stmt = "ret" expression ";"

empty_stmt = ";"

global_assign = "global" ident "=" expression ";"

local_assign = ident "=" expression ";"

expression = logical_or

logical_or = logical_and [ "||" logical_or ]

logical_and = comparsion [ "&&" logical_and ]

comparsion = additive [ ("==" | "!=" | "<" | "<=" | ">" | ">=") comparsion ]

additive = multiplicative [ ("+" | "-" ) additive  ]

multiplicative = unary [ ("*" | "/" | "%" ) multiplicative ]
 
unary = ("-" | "!") unary | call

call = primary [ "[" [ args ] "]" ]

args = expression { "," expression }

primary = NUM
          | IDENT
          |  "(" expression ")"

NUM = DIGIT { DIGIT }

IDENT = ( "_" | LETTER ) { "_" | LETTER | DIGIT }

LETTER = "a" | "b" | … | "z" | "A" | "B" | … | "Z"

DIGIT = "0" | "1" | … | "9"
